<resources>
    <!--App name-->
    <string name="app_name">Junior Leraar</string>

    <!--Firebase URL-->
    <string name="firebase_url">https://junior-leraar.firebaseio.com/Dialoguecard</string>

    <!--Tags-->
    <string name="tag_datasource">DatasourceClass</string>
    <string name="tag_firebase">FirebaseClass</string>
    <string name="tag_dialoguecardadapter">DialogueCardAdapterClass</string>
    <string name="tag_sectionspageradapter">SectionsPagerAdapterClass</string>

    <!--Titles of activity-->
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>

    <!--tabnames and card titles-->
    <string name="tab_startbekwaam">Startbekwaam</string>
    <string name="tab_bekwaam">Bekwaam</string>
    <string name="resultTitle">Resultaat</string>
    <string name="indicatorTitle">De leraar... </string>
    <string name="reflectionTitle">Reflectievragen</string>


    <!--Theme-->
    <string name="didactisch_bekwaam">Didactisch Bekwaam</string>
    <string name="collegiale_samenwerking">Collegiale Samenwerking</string>
    <string name="pedagogisch_bekwaam">Pedagogisch Bekwaam</string>

    <!--Level-->
    <string name="startbekwaam">Startbekwaam</string>
    <string name="bekwaam">Bekwaam</string>
    <string name="startbekwaam_caps">STARTBEKWAAM</string>
    <string name="bekwaam_caps">BEKWAAM</string>
    <!--Info-->
    <string name="info">
De Junior Leraar app is bedoeld om de ontwikkeling van startende leraren te ondersteunen.
\n\nDe app bevat de Dialoogkaarten die ontwikkeld zijn binnen het project Junior Leraar van de HvA en kan gebruikt worden als reflectie-instrument en als handvat tijdens begeleidingsgesprekken tussen een startende leraar en een begeleider, of tussen een student-in-opleiding en een begeleider.
\n\nDe basis van de app zijn 23 bekwaamheden voor startende leraren. Die bekwaamheden zijn geordend rond drie domeinen: pedagogisch bekwaam, didactisch bekwaam en collegiale samenwerking.
\n\nElke bekwaamheid is op twee niveaus uitgewerkt:
\n\n\u25CF op het niveau startbekwaam leraarschap (voor gebruik tijdens de opleiding en in het eerste jaar na de opleiding).
\n\n\u25CF op het niveau bekwaam leraarschap (voor gebruik in de eerste drie jaar van het leraarschap).
\nPer bekwaamheid bevat het scherm drie elementen:
\n\n1. het beoogde resultaat. Voor het niveau startbekwaam is het resultaat gericht op het handelen van de leraar, voor het niveau bekwaam is het resultaat gericht op het effect van dat handelen op de leerling.
\n\n2. Vervolgens worden indicatoren genoemd die bij kunnen dragen aan het beoogde resultaat. De indicatoren beschrijven het zichtbare handelen en het resultaat van dat handelen. Deze indicatoren zijn voorbeelden van handelen van de leraar. In de bekwaamheidsbeschrijvingen is geen onderscheid gemaakt naar onderwijstype, schoolvak of onderwijskundige visie van de school. Bij het gebruik van de kaarten kunnen starters en begeleiders indien gewenst eigen passende kleuring aan de indicatoren geven.
\n\n3. Tenslotte volgt een aantal reflectievragen. De coach kan deze vragen gebruiken bij het reflectiegesprek. De reflectievragen geven de mogelijkheid om stil te staan bij en het gesprek te voeren over de onderliggende kennis, opvattingen, overtuigingen of identiteit. De reflectievragen nodigen op deze wijze uit tot een open dialoog. De reflectievragen zijn bedoeld als suggestie voor deze dialoog en kunnen aangevuld worden met eigen vragen die aansluiten bij de situatie en ontwikkelvragen van de starter.
\n
\nDe app is bedoeld voor startende leraren, leraren in opleiding en hun coaches/begeleiders, zowel in het basisonderwijs als het voortgezet onderwijs. Meer informatie is te vinden op www.hva.nl/juniorleraar.
    </string>
    <string name="contact">© Hogeschool van Amsterdam
        \nPostbus 1025\n1000 BA Amsterdam\n020-595 1400\nservicedesk-ict@hva.nl</string>
    <string name="info_knop">Info knop</string>
    <string name="info_title"> <b>Dialoogkaarten Junior Leraar</b> </string>
    <string name="hogeschool_van_amsterdam_logo">Hogeschool van Amsterdam logo</string>
    <string name="junior_leraar_logo">Junior Leraar logo</string>
    <string name="didactisch_bekwaam_knop">Didactisch Bekwaam knop</string>
    <string name="pedagogisch_bekwaam_knop">Pedagogisch Bekwaam knop</string>
    <string name="collegiale_samenwerking_knop">Collegiale Samenwerking knop</string>
    <string name="startbekwaam_knop">Knop die de informatie voor Startbekwaam weergeeft</string>
    <string name="bekwaam_knop">Knop die de informatie voor Bekwaam weergeeft</string>

</resources>
